# timer-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
TimerBar/: Package.swift
TimerBar/Resources/: Info.plist
TimerBar/Sources/TimerBar/: Frame.swift  MenuView.swift  TimerBarApp.swift  TimerDatabase.swift  TimerState.swift
scripts/: build-timerbar.sh
src/: db.rs  frame.rs  git.rs  main.rs
src/commands/: cancel.rs  completions.rs  delete.rs  edit.rs  export.rs  log.rs  mod.rs  projects.rs  report.rs  restart.rs  start.rs  status.rs  stop.rs  switch.rs  tags.rs
tests/: integration.rs
