[package]
name = "timer-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timer-cli"
path = "src/main.rs"

[[bin]]
name = "timer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.33", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
